<resources>
    <string name="app_name">LindaSonrisaProveedor</string>

    <string name="lindasonrisa">Linda Sonrisa</string>
    <string name="lblUsername">Usuario</string>
    <string name="lblpassword">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>

    <string name="lblpasswordIngrese">Ingrese su usuario....</string>
    <string name="btnIngresarIngrese">************</string>
</resources>
