<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLogin2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:fontFamily="@font/open_sans_light"
        android:lineSpacingExtra="8sp"
        android:text="@string/lblUsername"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorFondo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/btnIngresarIngrese"
        android:inputType="textPassword"
        android:shadowColor="@color/colorFondo"
        android:textColor="@color/colorFondo"
        android:textColorHint="@color/colorFondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="463dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/lblpasswordIngrese"
        android:inputType="textPersonName"
        android:textColor="@color/colorFondo"
        android:textColorHint="@color/colorFondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="318dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/open_sans_light"
        android:lineSpacingExtra="8sp"
        android:text="@string/lblpassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorFondo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/button2"
        android:layout_width="162dp"
        android:layout_height="77dp"
        android:background="@color/colorSecundario"
        android:text="@string/btnIngresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.577" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>